refactor: add new `compileForDebug` method, mark old method as deprecated, and improve context class loader handling in TestUtil for better maintainability